@@ -63,5 +63,69 @@
 
 			return $converted;
 		}
+
+		public static function makeTempDirectory(
+			$where = 'file-utils/', $prefix = '', $mode = 0700
+		)
+		{
+			$directory = ONPHP_TEMP_PATH.$where;
+
+			if (substr($directory, -1) != DIRECTORY_SEPARATOR)
+				$directory .= DIRECTORY_SEPARATOR;
+
+			$attempts = 42;	// it's more than enough ;)
+
+			do {
+				--$attempts;
+				$path = $directory.$prefix.mt_rand();
+			} while (!mkdir($path, $mode, true) && $attempts > 0);
+
+			if ($attempts == 0)
+				throw
+					new WrongArgumentException(
+						"failed to create subdirectory in {$directory}"
+					);
+			
+			return $path;
+		}
+
+		public static function removeDirectory($directory, $recursive = true)
+		{
+			if (!$recursive) {
+
+				if (!unlink($directory))
+					throw new WrongArgumentException(
+						"cannot unlink {$directory}. may be not empty?"
+					);
+
+			} else {
+				if (!$handle = opendir($directory))
+					throw new WrongArgumentException(
+						"cannot read directory {$directory}"
+					);
+
+				while (($item = readdir($handle)) !== false) {
+					if ($item == '.' || $item == '..')
+						continue;
+
+					$path = $directory.DIRECTORY_SEPARATOR.$item;
+
+					if (is_dir($path))
+						self::removeDirectory($path);
+					elseif (!unlink($path))
+						throw new WrongStateException(
+							"cannot unlink {$path}"
+						);
+				}
+
+				closedir($handle);
+
+				if (!rmdir($directory)) {
+					throw new WrongStateException(
+						"cannot unlink {$directory}, though it should be empty now"
+					);
+				}
+			}
+		}
 	}
 ?>
