@@ -1,5 +1,10 @@
 # $Id$
 
+2007-02-19	Ivan Y. Khvostishkov
+
+	* main/Base/TempDirectory.class.php, main/Utils/FileUtils.class:php:
+	temp directory implementation, directories functions added
+
 2007-02-19	Konstantin V. Arkhipov
 
 	* main/Containers/Unified/UnifiedContainer.class.php: getCount()
